; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/libertas/extr_cfg.c_lbs_set_authtype.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/wireless/marvell/libertas/extr_cfg.c_lbs_set_authtype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lbs_private = type { i32 }
%struct.cfg80211_connect_params = type { i32, i32 }
%struct.cmd_ds_802_11_authenticate = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32 }

@ETH_ALEN = common dso_local global i32 0, align 4
@CMD_802_11_AUTHENTICATE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.lbs_private*, %struct.cfg80211_connect_params*)* @lbs_set_authtype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lbs_set_authtype(%struct.lbs_private* %0, %struct.cfg80211_connect_params* %1) #0 {
  %3 = alloca %struct.lbs_private*, align 8
  %4 = alloca %struct.cfg80211_connect_params*, align 8
  %5 = alloca %struct.cmd_ds_802_11_authenticate, align 4
  %6 = alloca i32, align 4
  store %struct.lbs_private* %0, %struct.lbs_private** %3, align 8
  store %struct.cfg80211_connect_params* %1, %struct.cfg80211_connect_params** %4, align 8
  %7 = call i32 @memset(%struct.cmd_ds_802_11_authenticate* %5, i32 0, i32 12)
  %8 = call i32 @cpu_to_le16(i32 12)
  %9 = getelementptr inbounds %struct.cmd_ds_802_11_authenticate, %struct.cmd_ds_802_11_authenticate* %5, i32 0, i32 2
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load %struct.cfg80211_connect_params*, %struct.cfg80211_connect_params** %4, align 8
  %12 = getelementptr inbounds %struct.cfg80211_connect_params, %struct.cfg80211_connect_params* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %23

15:                                               ; preds = %2
  %16 = getelementptr inbounds %struct.cmd_ds_802_11_authenticate, %struct.cmd_ds_802_11_authenticate* %5, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = load %struct.cfg80211_connect_params*, %struct.cfg80211_connect_params** %4, align 8
  %19 = getelementptr inbounds %struct.cfg80211_connect_params, %struct.cfg80211_connect_params* %18, i32 0, i32 1
  %20 = load i32, i32* %19, align 4
  %21 = load i32, i32* @ETH_ALEN, align 4
  %22 = call i32 @memcpy(i32 %17, i32 %20, i32 %21)
  br label %23

23:                                               ; preds = %15, %2
  %24 = load %struct.cfg80211_connect_params*, %struct.cfg80211_connect_params** %4, align 8
  %25 = getelementptr inbounds %struct.cfg80211_connect_params, %struct.cfg80211_connect_params* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  %27 = call i32 @lbs_auth_to_authtype(i32 %26)
  store i32 %27, i32* %6, align 4
  %28 = load i32, i32* %6, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23
  br label %37

31:                                               ; preds = %23
  %32 = load i32, i32* %6, align 4
  %33 = getelementptr inbounds %struct.cmd_ds_802_11_authenticate, %struct.cmd_ds_802_11_authenticate* %5, i32 0, i32 0
  store i32 %32, i32* %33, align 4
  %34 = load %struct.lbs_private*, %struct.lbs_private** %3, align 8
  %35 = load i32, i32* @CMD_802_11_AUTHENTICATE, align 4
  %36 = call i32 @lbs_cmd_with_response(%struct.lbs_private* %34, i32 %35, %struct.cmd_ds_802_11_authenticate* %5)
  store i32 %36, i32* %6, align 4
  br label %37

37:                                               ; preds = %31, %30
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i32 @memset(%struct.cmd_ds_802_11_authenticate*, i32, i32) #1

declare dso_local i32 @cpu_to_le16(i32) #1

declare dso_local i32 @memcpy(i32, i32, i32) #1

declare dso_local i32 @lbs_auth_to_authtype(i32) #1

declare dso_local i32 @lbs_cmd_with_response(%struct.lbs_private*, i32, %struct.cmd_ds_802_11_authenticate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
